# bluesky-oceansofnyc

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHAT_REFACTOR_SUMMARY.md  CONTRIBUTING.md  README.md  VCARD_README.md  bluesky_client.py  bumper_sticker_ideas.md  database.py  debug_ocr.py  exif_utils.py  geocoding.py  justfile  main.py  map_generator.py  modal_app.py  oceansofnyc.vcf  oceansofnyc_simple.vcf  plan.md  pyproject.toml  run_all_debug.py  run_ocr_test.py
.beads/: deletions.jsonl  issues.jsonl
analytics/: duplicate_sightings_sim.R
chat/: README.md  __init__.py  extractors.py  messages.py  session.py  webhook.py
database/: models.py
database/migrations/: add_borough_column.sql  add_image_columns.sql  add_image_urls.sql  add_pending_borough_to_sessions.sql  add_session_image_fields.sql  convert_timestamp_to_timestamptz.sql  drop_old_image_columns.sql
geolocate/: __init__.py  boroughs.py  exif.py  geocoding.py  maps.py
notify/: __init__.py  sms.py
post/: README.md  batch_trigger.py  bluesky.py
scripts/: README.md  backfill_boroughs.py  backfill_image_hashes.py  consolidate_contributors.py  recover_sessions.py
tests/: README.md  TESTING_STRATEGY.md  __init__.py  conftest.py  test_batch_trigger.py  test_chat_flow.md  test_database_sessions.py  test_database_sightings.py  test_database_tlc.py  test_extractors.py  test_geolocate.py  test_image_hashing.py  test_image_processor.py  test_modal_webhooks.py  test_validate_matcher.py
tests/mocks/: README.md  __init__.py  mock_bluesky.py  mock_database.py  mock_r2.py  mock_twilio.py
utils/: README.md  image_hashing.py  image_processor.py  r2_storage.py
validate/: README.md  __init__.py  cli.py  matcher.py  plate_ocr.py  tlc.py
web/: .gitignore  README.md  generate_data.py  index.html  serve_images.py
web/favico/: site.webmanifest
